--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <nav class="navbar navbar-expand-lg navbar-light ">
 
-                <a target="_blank" style=" font-size: 2.1rem;" class="navbar-brand" href="https://unnatbharatabhiyan.gov.in/wordpress/">UNNAT BHARAT ABHIYAN</a>
+                <a target="_blank" style=" font-size: 2.1rem;" class="navbar-brand" href="https://unnatbharatabhiyan.gov.in/wordpress/">UNNATI</a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
@@ -154,13 +154,13 @@
 
                         <h1 class="topy">Welcome To RSK IITK</h1>
                         <p class="topys">Hello All, Extend Your Arms In Welcome To The Future.The Best Is Yet To Come</p>
-
-
-
-
-
+              
 
                     </div>
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                      <a target="_blank" href="https://drive.google.com/drive/folders/16rVu-eWNwQ0Ks-mcEdK_owcrtgf70Piu?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses">CLASS SCHEDULE</button></a>
+                      <a target="_blank" href="https://rsk.iitk.ac.in/"><button type="button" class="btn btn-outline-warning btn-sm courses">MAIN WEBSITE</button></a>
+                  </div>
 
 
 
