--- a/index.html
+++ b/index.html
@@ -2,6 +2,23 @@
 <html>
 
 <head>
+    <SCRIPT language="JavaScript">
+        <!--hide
+
+        var password;
+        var pass1 = "techgeekshan";
+
+        password = prompt('Please enter your password to view this page!', ' ');
+
+        if (password == pass1)
+            alert('Password Correct! Click OK to enter!');
+        else {
+            window.location = "http://youtube.com/techgeekshan";
+        }
+
+        //-->
+    </SCRIPT>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>RSK EDUCATION</title>
