--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <!--hide
 
         var password;
-        var pass1 = "techgeekshan";
+        var pass1 = "Rsk@123";
 
         password = prompt('Please enter your password to view this page!', ' ');
 
         if (password == pass1)
             alert('Password Correct! Click OK to enter!');
         else {
-            window.location = "http://youtube.com/techgeekshan";
+            window.location = "https://rsk.iitk.ac.in/";
         }
 
         //-->
