--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <SCRIPT language="JavaScript">
+<!--     <SCRIPT language="JavaScript">
         <!--hide
 
         var password;
@@ -17,7 +17,7 @@
         }
 
         //-->
-    </SCRIPT>
+    </SCRIPT> -->
     
    
     <meta name="viewport" content="width=device-width, initial-scale=1">
