--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                      <a target="_blank" href="https://drive.google.com/drive/folders/16rVu-eWNwQ0Ks-mcEdK_owcrtgf70Piu?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses">CLASS SCHEDULE</button></a>
+                      <a target="_blank" href="https://calendar.google.com/calendar/embed?src=r5qko87sphner56ic1uhmp4jg0%40group.calendar.google.com&ctz=Asia%2FKolkata"><button type="button" class="btn btn-outline-danger btn-sm courses">CLASS SCHEDULE</button></a>
                       <a target="_blank" href="https://rsk.iitk.ac.in/"><button type="button" class="btn btn-outline-warning btn-sm courses">MAIN WEBSITE</button></a>
                   </div>
 
