--- a/chem1.html
+++ b/chem1.html
@@ -94,13 +94,13 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1lpn-P-tGYXSd8_58iIe1xRqcoy8HIWDW?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">EXPERIMENTS,ACTIVITIES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1lpn-P-tGYXSd8_58iIe1xRqcoy8HIWDW?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">EXPERIMENTS,ACTIVITIES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1N4AUFE3Bak7cPebYO_iwIwNRAFm6cT-F?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">TEST & EXAM-PAPERS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1N4AUFE3Bak7cPebYO_iwIwNRAFm6cT-F?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">TEST & EXAM-PAPERS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/19zPkdoHoAVkDhYgxq0AKk9CmpmG2sDN_?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">OFFLINE RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/19zPkdoHoAVkDhYgxq0AKk9CmpmG2sDN_?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">OFFLINE RECORDINGS</button></a>
                 </div>
 
 
@@ -108,7 +108,7 @@
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1fITNJAbj_oznh4JEUJbK1MpZEgLUXnIy?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1fITNJAbj_oznh4JEUJbK1MpZEgLUXnIy?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
             </div>
@@ -118,21 +118,21 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1FwJJVjceFkNiUk8_W96Ap-lKMFQWdyH2?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">OTHER RESOURCES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1FwJJVjceFkNiUk8_W96Ap-lKMFQWdyH2?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
                 </div>
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/18hdaliwQ0mrRe6geQ4d_DGMMmk4ovjmA?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">WORKSHEETS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/18hdaliwQ0mrRe6geQ4d_DGMMmk4ovjmA?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">WORKSHEETS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1tfJk_SzVEGRIThTQ5kxYDkat3OYXaDIj?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">WORKSHOPS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1tfJk_SzVEGRIThTQ5kxYDkat3OYXaDIj?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">WORKSHOPS</button></a>
                 </div>
 
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1v6LdKkMQd2z1mTAs0a3OgEtzNjWFOgix?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1v6LdKkMQd2z1mTAs0a3OgEtzNjWFOgix?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">NOTES</button></a>
                 </div>
 
             </div>
