--- a/chem4.html
+++ b/chem4.html
@@ -94,13 +94,13 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1s5Dq8jMP9SH03JO5C4hUcPmO6kXUoDyv?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">EXPERIMENTS,ACTIVITIES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1s5Dq8jMP9SH03JO5C4hUcPmO6kXUoDyv?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">EXPERIMENTS,ACTIVITIES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1-ky5Fl2qllDZ4iknApkyMeY8RJkljxom?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">TEST & EXAM-PAPERS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1-ky5Fl2qllDZ4iknApkyMeY8RJkljxom?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">TEST & EXAM-PAPERS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1zd6HjSmkP96y8ns1OXtgJvBsbQbgNTF6?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">OFFLINE RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1zd6HjSmkP96y8ns1OXtgJvBsbQbgNTF6?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">OFFLINE RECORDINGS</button></a>
                 </div>
 
 
@@ -108,7 +108,7 @@
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1dElEecVFMLgj2BctKjTy4a4oS4oz7r8b?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1dElEecVFMLgj2BctKjTy4a4oS4oz7r8b?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
             </div>
@@ -118,21 +118,21 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/11aSZuhaCt_Y33dqBgF7IFCeZwHFN7VR2?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">OTHER RESOURCES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/11aSZuhaCt_Y33dqBgF7IFCeZwHFN7VR2?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
                 </div>
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/11KxmDYQnTViI5mPT_RyfW3hjdgx6oK5g?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">WORKSHEETS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/11KxmDYQnTViI5mPT_RyfW3hjdgx6oK5g?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">WORKSHEETS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1qyr8kw7YCu2H_FXZT1fGBkAtHB6kPh0I?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">WORKSHOPS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1qyr8kw7YCu2H_FXZT1fGBkAtHB6kPh0I?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">WORKSHOPS</button></a>
                 </div>
 
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1Wdtqu9h9A0zDTWE-LjnHA5B9ZpFzhrIs?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1Wdtqu9h9A0zDTWE-LjnHA5B9ZpFzhrIs?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">NOTES</button></a>
                 </div>
 
             </div>
