--- a/chem2.html
+++ b/chem2.html
@@ -94,13 +94,13 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1tKmxB0AOy3qZfqP9qdJugzcNnuVJ87oi?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">EXPERIMENTS,ACTIVITIES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1tKmxB0AOy3qZfqP9qdJugzcNnuVJ87oi?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">EXPERIMENTS,ACTIVITIES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1-w688SRKgWIjzqEuDFJ15ieudWltM7I7?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">TEST & EXAM-PAPERS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1-w688SRKgWIjzqEuDFJ15ieudWltM7I7?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">TEST & EXAM-PAPERS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1v2kI6oH0Ini6Mrl6iKL_f8epDjP9Sbq_?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">OFFLINE RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1v2kI6oH0Ini6Mrl6iKL_f8epDjP9Sbq_?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">OFFLINE RECORDINGS</button></a>
                 </div>
 
 
@@ -108,7 +108,7 @@
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1yoNF0tx8Iv-WqT11MsXJcSyq1hanst_o?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1yoNF0tx8Iv-WqT11MsXJcSyq1hanst_o?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
             </div>
@@ -118,21 +118,21 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1RLAOcyuZEgpSoFeoEBuvfjg_h-u4xxot?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">OTHER RESOURCES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1RLAOcyuZEgpSoFeoEBuvfjg_h-u4xxot?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
                 </div>
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1o1HG-N4okFLTx-T33LUj4hKSJtA2rjFq?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">WORKSHEETS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1o1HG-N4okFLTx-T33LUj4hKSJtA2rjFq?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">WORKSHEETS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/19jxe4pYguRIzcCDWaVurRlBC44juZRN2?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">WORKSHOPS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/19jxe4pYguRIzcCDWaVurRlBC44juZRN2?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">WORKSHOPS</button></a>
                 </div>
 
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1ap23t2AH2l3yZWxC6weWX3wbEU6zan5y?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1ap23t2AH2l3yZWxC6weWX3wbEU6zan5y?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">NOTES</button></a>
                 </div>
 
             </div>
