--- a/math1.html
+++ b/math1.html
@@ -106,13 +106,13 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1gikBSdfhErh5dE132AeIrDtdbobQAbuX?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">EXPERIMENTS,ACTIVITIES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1gikBSdfhErh5dE132AeIrDtdbobQAbuX?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">EXPERIMENTS,ACTIVITIES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1SNZ685TFj0ZLfKlIiXWzu3XcdYXVoa70?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">TEST & EXAM-PAPERS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1SNZ685TFj0ZLfKlIiXWzu3XcdYXVoa70?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">TEST & EXAM-PAPERS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1rtTB3aVVagnKSmMzIr35y-Qtgo21Ad0Q?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">OFFLINE RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1rtTB3aVVagnKSmMzIr35y-Qtgo21Ad0Q?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">OFFLINE RECORDINGS</button></a>
                 </div>
 
 
@@ -120,7 +120,7 @@
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1JhXmvZMUPDKYjnCUJbaG-zwLZ1svcwNx?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1JhXmvZMUPDKYjnCUJbaG-zwLZ1svcwNx?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
             </div>
@@ -130,21 +130,21 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1h0UtH6KQNMJHw6M72dcjXbbqd13ciW4n?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">OTHER RESOURCES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1h0UtH6KQNMJHw6M72dcjXbbqd13ciW4n?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
                 </div>
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1zjMkbPrK3eYZArlLXhQjO60BG0XAjZu5?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">WORKSHEETS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1zjMkbPrK3eYZArlLXhQjO60BG0XAjZu5?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">WORKSHEETS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1N_OsjB-YM1tCAM0L3BGLkHSybsG7_tJP?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">WORKSHOPS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1N_OsjB-YM1tCAM0L3BGLkHSybsG7_tJP?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">WORKSHOPS</button></a>
                 </div>
 
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1pkeIX7h75tbL4I8gecPkmYJMGw7Wm30N?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1pkeIX7h75tbL4I8gecPkmYJMGw7Wm30N?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">NOTES</button></a>
                 </div>
 
             </div>
