--- a/math10.html
+++ b/math10.html
@@ -106,13 +106,13 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1SfW9A2TsQQKzzMF37yVi8MPeVveVTlrv?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">EXPERIMENTS,ACTIVITIES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1SfW9A2TsQQKzzMF37yVi8MPeVveVTlrv?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">EXPERIMENTS,ACTIVITIES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1AMB5TQOnHSn-IgqkWTDhytskS7BPg9gp?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">TEST & EXAM-PAPERS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1AMB5TQOnHSn-IgqkWTDhytskS7BPg9gp?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">TEST & EXAM-PAPERS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1ui3nD3hj2zqdAgW5cFI-ii1AlnUMNFW5?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">OFFLINE RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1ui3nD3hj2zqdAgW5cFI-ii1AlnUMNFW5?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">OFFLINE RECORDINGS</button></a>
                 </div>
 
 
@@ -120,7 +120,7 @@
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1unvNVp674SUkWnomVMZGFL5NQ8LoaNZT?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1unvNVp674SUkWnomVMZGFL5NQ8LoaNZT?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
             </div>
@@ -130,21 +130,21 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1TgOsYBoFKftxVWGHGcZYE4b1n3xz4p_v?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">OTHER RESOURCES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1TgOsYBoFKftxVWGHGcZYE4b1n3xz4p_v?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
                 </div>
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1mQkC5hJWnw-cIOn_8sfZhqlxw3ToLPdn?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">WORKSHEETS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1mQkC5hJWnw-cIOn_8sfZhqlxw3ToLPdn?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">WORKSHEETS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1GVBmNl---5Gs6Ov1X9oPLm-ZZqsSdnaW?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">WORKSHOPS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1GVBmNl---5Gs6Ov1X9oPLm-ZZqsSdnaW?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">WORKSHOPS</button></a>
                 </div>
 
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1ewzDbAtdEoRl-7OzC6YKmbp40msWl1MM?usp=sharing-"><button type="button" class="btn btn-outline-warning btn-sm courses">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1ewzDbAtdEoRl-7OzC6YKmbp40msWl1MM?usp=sharing-"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">NOTES</button></a>
                 </div>
 
             </div>
