--- a/math3.html
+++ b/math3.html
@@ -106,13 +106,13 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/16mStxQ79dmgZ31c5d5uzkpJ5Grqp8e0G?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">EXPERIMENTS,ACTIVITIES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/16mStxQ79dmgZ31c5d5uzkpJ5Grqp8e0G?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">EXPERIMENTS,ACTIVITIES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/18ajeTkTXGx1cUmL-MpBAWP0r7LT6DzVu?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">TEST & EXAM-PAPERS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/18ajeTkTXGx1cUmL-MpBAWP0r7LT6DzVu?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">TEST & EXAM-PAPERS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/15uRdzFXAxLdCMlZ5giAtqKqds-aDmcKC?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">OFFLINE RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/15uRdzFXAxLdCMlZ5giAtqKqds-aDmcKC?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">OFFLINE RECORDINGS</button></a>
                 </div>
 
 
@@ -120,7 +120,7 @@
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1FqzWb7zagQ71KnbAphWw7zWDtomTJ8ex?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1FqzWb7zagQ71KnbAphWw7zWDtomTJ8ex?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
             </div>
@@ -130,21 +130,21 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1apu826VlmcpRY5X4TbT48TGhMBm7YX7u?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">OTHER RESOURCES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1apu826VlmcpRY5X4TbT48TGhMBm7YX7u?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
                 </div>
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1jOchbHS82ngzu_T8lxay58fgf-qJ5GAG?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">WORKSHEETS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1jOchbHS82ngzu_T8lxay58fgf-qJ5GAG?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">WORKSHEETS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/11fDSEXKeatJkNG-RbTU1t_irMVXwlB1J?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">WORKSHOPS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/11fDSEXKeatJkNG-RbTU1t_irMVXwlB1J?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">WORKSHOPS</button></a>
                 </div>
 
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1jPUiCaWux_Gdr66xq3icAIDQ7aGUu6wD?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1jPUiCaWux_Gdr66xq3icAIDQ7aGUu6wD?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">NOTES</button></a>
                 </div>
 
             </div>
