--- a/math6.html
+++ b/math6.html
@@ -106,13 +106,13 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1ikZUesWKiGe9zTd4E6wQDXfNOLTxWGSs?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">EXPERIMENTS,ACTIVITIES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1ikZUesWKiGe9zTd4E6wQDXfNOLTxWGSs?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">EXPERIMENTS,ACTIVITIES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1DIWe_40YeXru6y7aO00e5tPADVrHZn2i?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">TEST & EXAM-PAPERS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1DIWe_40YeXru6y7aO00e5tPADVrHZn2i?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">TEST & EXAM-PAPERS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1ewMTU3zfD_oPNspH1t83NF7VXSUVdcMU?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">OFFLINE RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1ewMTU3zfD_oPNspH1t83NF7VXSUVdcMU?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">OFFLINE RECORDINGS</button></a>
                 </div>
 
 
@@ -120,7 +120,7 @@
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1KRQKm65naKJ7SacrXvJ-UScfXMQw2xbo?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1KRQKm65naKJ7SacrXvJ-UScfXMQw2xbo?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
             </div>
@@ -130,21 +130,21 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/10jTq0TeRxeku40ua4Ao2TmjqQ_ekkLlb?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">OTHER RESOURCES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/10jTq0TeRxeku40ua4Ao2TmjqQ_ekkLlb?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
                 </div>
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1J5uNN9bH6Vb7_B_zCaikMBWe920RINT3?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">WORKSHEETS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1J5uNN9bH6Vb7_B_zCaikMBWe920RINT3?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">WORKSHEETS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1hUx90OJxYN0oDlquMkzcgCa50Neoj4vq?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">WORKSHOPS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1hUx90OJxYN0oDlquMkzcgCa50Neoj4vq?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">WORKSHOPS</button></a>
                 </div>
 
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1NaHufXFELjM7RGX14Aamvggb597UFpIx?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1NaHufXFELjM7RGX14Aamvggb597UFpIx?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">NOTES</button></a>
                 </div>
 
             </div>
