--- a/math9.html
+++ b/math9.html
@@ -106,13 +106,13 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1u_njrxpPD2Sp4lq9ZknuANgf42j4xXda?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">EXPERIMENTS,ACTIVITIES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1u_njrxpPD2Sp4lq9ZknuANgf42j4xXda?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">EXPERIMENTS,ACTIVITIES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1cm-jrr1EP0leP1mEXgkTMvvk3m20tFfy?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">TEST & EXAM-PAPERS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1cm-jrr1EP0leP1mEXgkTMvvk3m20tFfy?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">TEST & EXAM-PAPERS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1qAfwwWNX2zENg_4YKJEMs87P2nYxQL7k?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">OFFLINE RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1qAfwwWNX2zENg_4YKJEMs87P2nYxQL7k?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">OFFLINE RECORDINGS</button></a>
                 </div>
 
 
@@ -120,7 +120,7 @@
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1LtHwpuL1huXWR2giv5SL8fc3uIiGmk6S?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1LtHwpuL1huXWR2giv5SL8fc3uIiGmk6S?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
             </div>
@@ -130,21 +130,21 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/14N5RyXI4Q0LN2y2E2SR4TFyVcdQxrxLa?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">OTHER RESOURCES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/14N5RyXI4Q0LN2y2E2SR4TFyVcdQxrxLa?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
                 </div>
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1N_8xjLZxh3ZIvaA77e4pdxBCmA0uKek7?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">WORKSHEETS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1N_8xjLZxh3ZIvaA77e4pdxBCmA0uKek7?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">WORKSHEETS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/13X0CuEnKh1WYAas4gIhjPQB__W5MdHQu?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">WORKSHOPS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/13X0CuEnKh1WYAas4gIhjPQB__W5MdHQu?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">WORKSHOPS</button></a>
                 </div>
 
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1TsKV16dSyN_hvondneBwnaMM-y904zU1?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1TsKV16dSyN_hvondneBwnaMM-y904zU1?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">NOTES</button></a>
                 </div>
 
             </div>
