--- a/phy4.html
+++ b/phy4.html
@@ -95,13 +95,13 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="blank" href="https://drive.google.com/drive/folders/1AW-en6SigCgJALrFq6eOIDqI-t6NzwGn?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses">EXPERIMENTS,ACTIVITIES</button></a>
+                    <a target="blank" href="https://drive.google.com/drive/folders/1AW-en6SigCgJALrFq6eOIDqI-t6NzwGn?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">EXPERIMENTS,ACTIVITIES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="blank" href="images/UG-Manual.pdf"><button type="button" class="btn btn-outline-danger btn-sm courses">TEST & EXAM-PAPERS</button></a>
+                    <a target="blank" href="images/UG-Manual.pdf"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">TEST & EXAM-PAPERS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="blank" href="https://drive.google.com/drive/folders/19C0mazKo0JvfhcVMWEkrNKE0xWq-BHsG?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses">OFFLINE RECORDINGS</button></a>
+                    <a target="blank" href="https://drive.google.com/drive/folders/19C0mazKo0JvfhcVMWEkrNKE0xWq-BHsG?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">OFFLINE RECORDINGS</button></a>
                 </div>
 
 
@@ -109,7 +109,7 @@
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="blank" href="https://drive.google.com/drive/folders/1jNRc-WlU04QiiqZ95MSJ7aCPVtyEGb_-?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses">ZOOM RECORDINGS</button></a>
+                    <a target="blank" href="https://drive.google.com/drive/folders/1jNRc-WlU04QiiqZ95MSJ7aCPVtyEGb_-?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
             </div>
@@ -119,21 +119,21 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="blank" href="https://drive.google.com/drive/folders/18j4jgEB15uNjVIaZ96ANEx0KIMZjmpjU?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses">OTHER RESOURCES</button></a>
+                    <a target="blank" href="https://drive.google.com/drive/folders/18j4jgEB15uNjVIaZ96ANEx0KIMZjmpjU?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
                 </div>
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="blank" href="https://drive.google.com/drive/folders/1EtwF6r7f-IOqnxIp13t_T8V8eXdriaSu?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses">WORKSHEETS</button></a>
+                    <a target="blank" href="https://drive.google.com/drive/folders/1EtwF6r7f-IOqnxIp13t_T8V8eXdriaSu?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">WORKSHEETS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="blank" href="https://drive.google.com/drive/folders/1IVuQujNeOu4OJ95HuPQ_hiqaLoGtRusM?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses">WORKSHOPS</button></a>
+                    <a target="blank" href="https://drive.google.com/drive/folders/1IVuQujNeOu4OJ95HuPQ_hiqaLoGtRusM?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">WORKSHOPS</button></a>
                 </div>
 
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="blank" href="https://drive.google.com/drive/folders/1huKdY-qbXrK7P0x03BUe1IoVj_IqEtM8?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses">NOTES</button></a>
+                    <a target="blank" href="https://drive.google.com/drive/folders/1huKdY-qbXrK7P0x03BUe1IoVj_IqEtM8?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">NOTES</button></a>
                 </div>
 
             </div>
