--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <body>
 
-    <section style="background-image: url(images/education-background.jpg);" id="title">
+    <section style="background-image: url(images/act3.jpg);" id="title">
         <div class="container-fluid">
             <!-- Nav Bar -->
 
