--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
 
 
     <!-- Footer -->
+            <iframe src="https://calendar.google.com/calendar/embed?src=r5qko87sphner56ic1uhmp4jg0%40group.calendar.google.com&ctz=Asia%2FKolkata" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
 
     <div class="footer">
         <a target="blank" href="https://www.facebook.com/rskiitk/"><img class="soc" src="images/2945059_facebook_fb_logo_social_icon.png"></a>
