--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <SCRIPT language="JavaScript">
+<!--     <SCRIPT language="JavaScript">
         <!--hide
 
         var password;
@@ -15,7 +15,7 @@
         else {
             window.location = "https://rsk.iitk.ac.in/";
         }
-    </SCRIPT>
+    </SCRIPT> -->
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
