--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
 
 
-                        <h1 class="t1">Ranjit Singh Rozi Shiksha Kendra</h1>
-                        <p class="t2">Extend Your Arms In Welcome To The Future. <br> The Best Is Yet To Come</p>
+                        <h1 class="topy">Ranjit Singh Rozi Shiksha Kendra</h1>
+                        <p class="topys">Extend Your Arms In Welcome To The Future, The Best Is Yet To Come</p>
 
 
                     </div>
