--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
             <nav class="navbar navbar-expand-lg navbar-dark ">
 
-                <a target="_blank" style=" font-size: 2.1rem;" class="navbar-brand" href="https://www.iitk.ac.in/"><img class="iitk" src="images/iitk logo-modified.jpeg"> </a>
-                <a target="_blank" style=" font-size: 2.1rem;" class="navbar-brand" href="https://rsk.iitk.ac.in/"><img class="rsk" src="images/rsk logo.jpeg"> </a>
+                <a target="_blank" style=" font-size: 2.1rem;" class="navbar-brand" href="https://www.iitk.ac.in/"><img class="iitk" src="images/iitk logo-modified.png"> </a>
+                <a target="_blank" style=" font-size: 2.1rem;" class="navbar-brand" href="https://rsk.iitk.ac.in/"><img class="rsk" src="images/rsk logo.png"> </a>
 
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
