--- a/chem1.html
+++ b/chem1.html
@@ -94,7 +94,7 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1v6LdKkMQd2z1mTAs0a3OgEtzNjWFOgix?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1v6LdKkMQd2z1mTAs0a3OgEtzNjWFOgix?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
                     <a target="_blank" href="https://drive.google.com/drive/folders/1fITNJAbj_oznh4JEUJbK1MpZEgLUXnIy?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
