--- a/chem2.html
+++ b/chem2.html
@@ -94,7 +94,7 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1ap23t2AH2l3yZWxC6weWX3wbEU6zan5y?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1ap23t2AH2l3yZWxC6weWX3wbEU6zan5y?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
