--- a/math7.html
+++ b/math7.html
@@ -105,7 +105,7 @@
             <div class="mid4">
                 <div style="background-color: rgb(18,18,18);" class="row">
                     <div class="col-lg-3 col-md-3 col-sm-12">
-                        <a target="_blank" href="https://drive.google.com/drive/folders/1KfHnnQUcJOiX00qBr0CbjUaUaawEbhgr?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">NOTES</button></a>
+                        <a target="_blank" href="https://drive.google.com/drive/folders/1KfHnnQUcJOiX00qBr0CbjUaUaawEbhgr?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12">
                         <a target="_blank" href="https://drive.google.com/drive/folders/1TYELEClbLdQ78eT4xYYgZoSptgs6y3LS?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
