--- a/phy1.html
+++ b/phy1.html
@@ -94,7 +94,7 @@
         <div class="mid4">
             <div style="background-color: rgb(18,18,18);" class="row">
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="blank" href="https://drive.google.com/drive/folders/1pkhmw5o6ekwJaiBRRvIL8w8FYe0NcX1c?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">NOTES</button></a>
+                    <a target="blank" href="https://drive.google.com/drive/folders/1pkhmw5o6ekwJaiBRRvIL8w8FYe0NcX1c?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
                     <a target="blank" href="https://drive.google.com/drive/folders/1FqYyWe63PH2H-ur7gtI8Zx1tu0ohnG9F?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
