--- a/math2.html
+++ b/math2.html
@@ -108,7 +108,7 @@
                         <a target="_blank" href="https://drive.google.com/drive/folders/1ZxqDgozqVSxvXDi6Gj5qgMHGniaOar0o?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12">
-                        <a target="_blank" href="https://drive.google.com/drive/folders/158gMD1MrhD8L8GhVLrpLPZnNjMHMGh6m?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
+                        <a target="_blank" href="https://youtube.com/playlist?list=PLNH1H4kKR1ny-wcdvlNWkMNUEc0ecFeab"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12">
                         <a target="_blank" href="https://drive.google.com/drive/folders/1UZQTfasvBoeYgVjliJzxFJLmMJJgwf-J?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
