--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
                   <span class="course" >PHYSICS</span>
                   </button>
                                 <div class="dropdown-menu">
+                                    <a target="_blank" class="dropdown-item" href="phy6.html"><span class="sub">LIGHT-REFLECTION AND REFRACTION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy7.html"><span class="sub">THE HUMAN EYE AND THE COLOURFUL WORLD</span></a>
                                     <a target="_blank" class="dropdown-item" href="phy1.html"><span class="sub">MOTION</span></a>
                                     <a target="_blank" class="dropdown-item" href="phy2.html"><span class="sub">FORCES AND LAWS OF MOTION</span></a>
                                     <a target="_blank" class="dropdown-item" href="phy3.html"><span class="sub">GRAVITATION</span></a>
