--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
                 <span class="course" >CHEMISTRY</span>
                 </button>
                                 <div class="dropdown-menu">
+                                    <a target="_blank" class="dropdown-item" href="chem4.html"><span class="sub">CHEMICAL REACTIONS AND EQUATIONS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem5.html"><span class="sub">ACIDS BASES AND SALTS</span></a>
                                     <a target="_blank" class="dropdown-item" href="chem1.html"><span class="sub">MATTER IN OUR SORROUNDINGS</span></a>
                                     <a target="_blank" class="dropdown-item" href="chem2.html"><span class="sub">IS MATTER AROUND US PURE</span></a>
                                     <a target="_blank" class="dropdown-item" href="chem3.html"><span class="sub">ATOMS AND MOLECULES</span></a>
