--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
               <span class="course" >BIOLOGY</span>
               </button>
                                 <div class="dropdown-menu">
+                                    <a target="_blank" class="dropdown-item" href="bio7.html"><span class="sub">LIDE PROCESSES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio8.html"><span class="sub">CONTROL AND COORDINATION</span></a>
                                     <a target="_blank" class="dropdown-item" href="bio1.html"><span class="sub">THE FUNDAMENTAL UNIT OF LIFE</span></a>
                                     <a target="_blank" class="dropdown-item" href="bio2.html"><span class="sub">TISSUES</span></a>
                                     <a target="_blank" class="dropdown-item" href="bio3.html"><span class="sub">DIVERSITY IN LIVING ORGANISMS</span></a>
@@ -139,6 +141,8 @@
             <span class="course" >MATHS</span>
             </button>
                                 <div class="dropdown-menu">
+                                    <a target="_blank" class="dropdown-item" href="math16.html"><span class="sub">REAL NUMBERS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math17.html"><span class="sub">POLYNOMIALS</span></a>
                                     <a target="_blank" class="dropdown-item" href="math1.html"><span class="sub">NUMBER SYSYTEM</span></a>
                                     <a target="_blank" class="dropdown-item" href="math2.html"><span class="sub">POLYNOMIALS</span></a>
                                     <a target="_blank" class="dropdown-item" href="math3.html"><span class="sub">COORDINATE GEOMETRY</span></a>
